fix jbang execution