@@ -1,7 +1,7 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
 //JAVA 21+
 //PREVIEW
-//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
+//JAVA_OPTIONS --enable-preview --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector
 //MODULES jdk.incubator.vector
 //DEPS io.quarkus.platform:quarkus-bom:3.17.2@pom
 //DEPS io.quarkus:quarkus-rest
@@ -9,7 +9,7 @@
 //DEPS io.quarkus:quarkus-smallrye-openapi
 //DEPS io.quarkiverse.langchain4j:quarkus-langchain4j-jlama:0.22.0
 //DEPS com.github.tjake:jlama-core:0.8.2
-//DEPS com.github.tjake:jlama-native:0.8.2
+//DEPS com.github.tjake:jlama-native:0.8.2:linux-x86_64
 //DEPS org.jsoup:jsoup:1.18.1
 
 //FILES src/main/resources/application.properties
